--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,5 @@ dependencies {
     //okhttp
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-
+    compile 'com.android.support:design:23.2.0'
 }
