--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "rx.dong.com.rxjoke"
-        minSdkVersion 16
+        minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,10 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.orhanobut:logger:1.10'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
     //leakcanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     // or 1.4-beta1
@@ -44,6 +42,10 @@ dependencies {
     //okhttp
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-    compile 'com.android.support:design:23.2.0'
     compile 'me.yokeyword:imagepicker:0.2.1'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:design:23.1.0'
+    compile 'com.bm.photoview:library:1.4.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
